fix/refactor(BtnSwitchTheme): layout on mobile version

--- a/src/components/BtnSwitchTheme/BtnSwitchTheme.scss
+++ b/src/components/BtnSwitchTheme/BtnSwitchTheme.scss
@@ -4,13 +4,16 @@ $cursorPointerThemeNight: url('../../images/cursor_pointer_night_theme.svg'), po
 $btnImageThemeNight: url('../../images/btn_switch_theme_night.svg');
 
 .btn-switch-theme {
-  width: 25px;
-  height: 25px;
+  background-size: 24px 24px;
+  width: 24px;
+  height: 24px;
   border: none;
   font-size: 15px;
   outline: none;
   background-color: transparent;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   align-self: center;
   &_theme-day {
     background-image: $btnImageThemeDay;
@@ -19,5 +22,21 @@ $btnImageThemeNight: url('../../images/btn_switch_theme_night.svg');
   &_theme-night {
     background-image: $btnImageThemeNight;
     cursor: $cursorPointerThemeNight;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .btn-switch-theme {
+    background-size: 22px 22px;
+    width: 22px;
+    height: 22px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .btn-switch-theme {
+    background-size: 20px 20px;
+    width: 20px;
+    height: 20px;
   }
 }
